# AirSensorInternalESP32

./: .gitignore  .gitlab-ci.yml  .gitmodules  CMakeLists.txt  README.md  fix_esp_idf_build.patch  sdkconfig
.github/workflows/: esp-idf.yml
docs/: InternalUnitFrame.scad  InternalUnitFrame.stl  PMSensorCaseInternal.scad  PMSensorCaseInternal.stl
main/: AppConfig.cpp.example  AppConfig.h  AppMain.cpp  ArduinoStubs.cpp  CMakeLists.txt  DustMonitorController.cpp  DustMonitorController.h  DustMonitorView.cpp  DustMonitorView.h  EspNowTransport.cpp  EspNowTransport.h  FreeSans15pt8b.h  GroupBitView.h  PTHProvider.cpp  PTHProvider.h  SPS30DataProvider.cpp  SPS30DataProvider.h  TimeFunctions.h  WiFiManager.cpp  WiFiManager.h  WiFiTimeSync.cpp  WiFiTimeSync.h
